Updated dependencies related with components

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "laravelangular/generators": "2.7.*",
     "irazasyed/jwt-auth-guard" : "^1.0",
     "barryvdh/laravel-cors"    : "^0.8.2",
-    "consigliere/components"   : "^0.1.1"
+    "consigliere/components"   : "0.1.*"
   },
   "require-dev" : {
     "fzaninotto/faker"    : "~1.4",
