--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "laravelangular/generators": "2.7.*",
     "irazasyed/jwt-auth-guard" : "^1.0",
     "barryvdh/laravel-cors"    : "^0.8.2",
-    "consigliere/components"   : "0.1.*"
+    "consigliere/components"   : "0.1.*",
+    "jeroen-g/laravel-packager": "^1.5"
   },
   "require-dev" : {
     "fzaninotto/faker"    : "~1.4",
@@ -32,7 +33,7 @@
     "classmap": [
       "app",
       "database",
-      "workbench"
+      "packages"
     ],
     "psr-4"   : {
       "App\\": "app/"
