--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "bootstrap-sass": "^3.3.7",
+    "del": "^2.2.2",
     "eslint-plugin-angular": "^1.3.1",
     "gulp": "^3.9.1",
     "gulp-concat-sourcemap": "^1.3.1",
