--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-/bower_components
-/vendor
 /node_modules
-Homestead.yaml
+/public/storage
+/public/hot
+/storage/*.key
+/vendor
+/.idea
 Homestead.json
+Homestead.yaml
 .env
+/bower_components
 /public/js
 /public/css
 /public/build
 /public/views
-/packages/
+/packages
