Frontend package/ components dependencies

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "laravel5-angular-material-starter",
+  "name": "onsigbaar",
   "authors": [
-    "Jad Joubran <jad@jadjoubran.com>"
+    "anonymoussc <50c5ac69@opayq.com>"
   ],
   "ignore": [
     "**/.*",
