--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "tymon/jwt-auth": "1.0.*@dev",
         "laravelangular/generators": "2.7.*",
         "irazasyed/jwt-auth-guard": "^1.0",
-        "barryvdh/laravel-cors": "^0.8.2"
+        "barryvdh/laravel-cors": "^0.8.2",
+        "consigliere/foundation": "0.2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
