--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "onsigbaar",
-  "authors": [
+  "name"        : "onsigbaar",
+  "authors"     : [
     "anonymoussc <50c5ac69@opayq.com>"
   ],
-  "ignore": [
+  "ignore"      : [
     "**/.*",
     "node_modules",
     "bower_components",
@@ -11,12 +11,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.6",
-    "angular-ui-router": "~1.0.0-alpha.3",
-    "ngstorage": "~0.3.10",
-    "angular-material": "~1.0.8",
-    "restangular": "~1.5.2",
+    "angular"            : "~1.5",
+    "angular-ui-router"  : "~1.0.0-alpha.3",
+    "ngstorage"          : "~0.3.10",
+    "angular-material"   : "~1.0.8",
+    "restangular"        : "~1.5.2",
     "angular-loading-bar": "~0.9.0",
-    "satellizer": "^0.14.0"
+    "satellizer"         : "^0.14.0"
+  },
+  "resolutions" : {
+    "angular": "1.6.4"
   }
 }
