--- a/package.json
+++ b/package.json
@@ -1,34 +1,40 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-poll --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  "private"        : true,
+  "scripts"        : {
+    "prod": "gulp --production",
+    "dev" : "gulp watch"
   },
   "devDependencies": {
-    "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^0.8.3",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10",
-    "babel-core": "^6.16.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "del": "^2.2.2",
-    "eslint-plugin-angular": "^1.3.1",
-    "gulp": "^3.9.1",
-    "gulp-concat-sourcemap": "^1.3.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-filter": "^4.0.0",
-    "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-eslint": "^3.0.0",
+    "babel-core"                     : "^6.16.0",
+    "babel-loader"                   : "^6.2.5",
+    "babel-preset-es2015"            : "^6.16.0",
+    "bootstrap-sass"                 : "^3.3.7",
+    "buble"                          : "^0.15.2",
+    "buble-loader"                   : "^0.4.0",
+    "del"                            : "^2.2.2",
+    "eslint-plugin-angular"          : "^1.3.1",
+    "gulp"                           : "^3.9.1",
+    "gulp-concat"                    : "^2.6.1",
+    "gulp-concat-sourcemap"          : "^1.3.1",
+    "gulp-cssnano"                   : "^2.1.2",
+    "gulp-filter"                    : "^4.0.0",
+    "gulp-if"                        : "^2.0.2",
+    "gulp-notify"                    : "^3.0.0",
+    "gulp-rename"                    : "^1.2.2",
+    "gulp-run-command"               : "0.0.7",
+    "gulp-template"                  : "^4.0.0",
+    "gulp-uglify"                    : "^2.0.1",
+    "gulp-util"                      : "^3.0.8",
+    "jquery"                         : "^3.1.0",
+    "laravel-elixir"                 : "^6.0.0-9",
+    "laravel-elixir-eslint"          : "^3.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
-    "main-bower-files": "^2.13.1",
-    "ng-annotate-loader": "^0.1.1",
-    "sw-precache": "^4.0.0"
+    "lodash"                         : "^4.14.0",
+    "main-bower-files"               : "^2.13.1",
+    "moment"                         : "^2.18.1",
+    "ng-annotate-loader"             : "^0.1.1",
+    "string"                         : "^3.3.3",
+    "sw-precache"                    : "^4.0.0",
+    "yargs"                          : "^8.0.1"
   }
 }
