Updated dependencies: composer

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "onsigbaar/foundation": "0.5.*"
+        "onsigbaar/foundation": "0.5.*",
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -20,9 +21,7 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories",
-            "api",
-            "packages"
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -37,6 +36,20 @@
         "laravel": {
             "dont-discover": [
             ]
+        },
+        "merge-plugin": {
+            "include": [
+                "api/*/composer.json",
+                "app/Components/*/composer.json",
+                "packages/*/*/composer.json"
+            ],
+            "recurse": true,
+            "replace": false,
+            "ignore-duplicates": false,
+            "merge-dev": true,
+            "merge-extra": false,
+            "merge-extra-deep": false,
+            "merge-scripts": true
         }
     },
     "scripts": {
